<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CampusApp</string>

    <string name="student_name">Name</string>
    <string name="faculty_name">Faculty of computers and informatics</string>
    <string name="choose_app">Choose app</string>
    <string name="cancel">cancel</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="select_time">ChoTime</string>
    <string name="perrmission">Please Enable All Perrmissions</string>
    <string name="categories">categories</string>
    <string name="new_user">New user? sign up now</string>
    <string name="phone_number">phone number</string>
    <string name="my_account">My Profile</string>
    <string name="save_updates">Save</string>
    <string name="edit_image">Edit Image</string>
    <string name="run_notification">Run Notification</string>
    <string name="create_account">create_account</string>
    <string name="already_user">already_user? sign in now</string>
    <string name="please_wait">Please wait...</string>
    <string name="check_your_internet">حدث خطأ ما !! برجاء التأكد من الاتصال بالانترنت .</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password?</string>
    <string name="login">login</string>
    <string name="doctor_login">sign up as a doctor</string>
    <string name="student_login">sign up as a student</string>
    <string name="logout">log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter_without_login">دخول بدون تسجيل</string>
    <string name="select_picture">اختر صورة</string>
    <string name="error_loading_images">خطأ فى تحميل الصور</string>
    <string name="please_enter_right_password">"من فضلك ادخل كلمة سر صحيحه "</string>
    <string name="plaese_enter_right_email">من فضلك ادخل ايميل صحيح</string>
    <string name="please_enter_right_user_name">من فضلك ادخل اسم مستخدم صحيح</string>
    <string name="please_enter_right_email">من فضلك ادخل ايميل صحيح</string>
    <string name="please_enter_email">من فضلك ادخل الايميل </string>
    <string name="please_enter_password">من فضلك ادخل الباسورد </string>
    <string name="send_notification">Send Notification</string>

    <string name="add_photo">اضافة صورة</string>
    <string name="home_page">الصفحة الرئيسية</string>
    <string name="please_enter_phone">من فضلك ادخل رقم التليفون</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="action_settings">Settings</string>
    <string-array name="Department">
        <item>عام</item>
        <item>علوم الحاسب</item>
        <item>نظم المعلومات</item>
    </string-array>

    <string-array name="Study_Year">
        <item>الفرقة الاولى</item>
        <item>الفرقة الثانية</item>
        <item>الفرقة الثالثة</item>
        <item>الفرقة الرابعة</item>
    </string-array>

    <string-array name="Section">
        <item>سيكشن واحد</item>
        <item>سيكشن اتنين</item>
        <item>سيكشن ثلاثة</item>
        <item>سيكشن اربعة</item>
        <item>سيكشن خمسة</item>
        <item>سيكشن ستة</item>
        <item>سيكشن سبعة</item>
        <item>سيكشن ثمانية</item>
        <item>سيكشن تسعة</item>
    </string-array>

    <string name="view_events">View events</string>
    <string name="free_halls">Free halls</string>
    <string name="schedule">schedule</string>
    <string name="share_app">Share app</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="style_json">
        [
        {
        \"featureType\": \"poi.school\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
        {
        \"color\": \"#b6b390\"
        }
        ]
        },
        {
        \"featureType\": \"poi.sports_complex\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
        {
        \"color\": \"#55a327\"
        }
        ]
        }
        ]
    </string>
    <string name="title_activity_tabed_activity">Tabed_activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="create_event">Create event</string>
    <string name="event_name">Event name</string>
    <string name="event_link">Event link</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event_details">Event details</string>
    <string name="event_location">Event location</string>
    <string name="done">Done</string>
    <string name="student">Student</string>
    <string name="events">Events</string>
    <string name="contact_us">Contact us</string>
    <string name="user_name">User name</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="Write_post">Write your post..</string>
    <string name="attachment">No attachment uploaded

  </string>
    <string name="post_to">Send post to:</string>
    <string name="subject">Subject</string>
    <string name="section">Section</string>
    <string name="send">Send</string>
    <string name="ok">Ok</string>
    <string name="doctor_name">Ahmed sallam</string>
    <string name="open_attachment">assignment 1.pdf</string>
    <string name="docot_photo">Doctor photo</string>
    <string name="post_content">Post content</string>
    <string name="faculty_photo">Faculty photo</string>
    <string name="more">More</string>
    <string name="faculty_info">Faculty info</string>
    <string name="description">Description</string>
    <string name="events_info">View history of events and activities</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="Notification_sender">Ahmed Sallam</string>
    <string name="notification_descrip">Assignment 1 is available now Assignment 1 is available now
        Assignment 1 is available now ...
    </string>
    <string name="notification_time">5:45</string>
    <string name="sender_photo">Sender photo</string>
    <string name="unioi_name">FCI Union</string>
    <string name="follow">Follow</string>
    <string name="followers_counter">20 Followers</string>
    <string name="email_text">www.fci.union.com</string>
    <string name="phone_text">012578256521</string>
    <string name="location">Location</string>
    <string name="location_text">Faculty of computers &amp; informatics</string>
    <string name="description_text">the details and goals
        ...............................................................
        ...............................................................
        ...............................................................
        ...............................................................
        here </string>

</resources>
